# compose_parser

./: Cargo.toml  LICENSE  Makefile  README.md  TASK.md  example.txt
examples/correct/: parser_correct_multiply.kt  parser_correct_only_one_image.kt  parser_correct_only_one_text.kt
examples/uncorrected/: uncorrected_composable_annotation.kt  uncorrected_composable_without_fun.kt  uncorrected_fun_name.kt  uncorrected_image_url.kt  uncorrected_spaces.kt
src/: cli.rs  composable.pest  lib.rs  main.rs
tests/: composable_parser.rs  composable_parser_correct.rs  composable_parser_uncorrected.rs  function_declaration_test.rs  grammar_function_test.rs  grammar_string_test.rs
