[package]
name = "compose_parser"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Rust parser created to parse the Jetpack Compose syntax tree"
authors = ["Dzhos Oleksii"]
homepage = "https://github.com/NaUKMA-Programistich/compose_parser"

[dependencies]
peg = "0.8.2"
pest = "2.7.5"
pest_derive = "2.7.5"
pest_generator = "2.7.5"
anyhow = "1.0.75"
